client/src/App.css
body {
    background-color: #e3ffdf;
    font-family: 'Quicksand', sans-serif;

}

.App {
  text-align: center;
  color: #2e2e2e;
}

.App-header {
  background-color: #FDFDFD;
  color: #08E6C8;
  height: 60px;
  padding: 10px;
  text-align: left;

}

.App-header h1 {
  font-size: 2em;
  text-align: left; 
  display: inline;
  margin-left: 30px;
}

.App-header .appBtn {
  float: right;
  margin-right: 30px;
}

.appBtn, .gitHubButton {
  background: #fff;
  text-transform: uppercase;
  color: #08E6C8;
  padding: 5px 10px;
  border: .5px solid lightgrey;
  transition: 0.3s ease-in-out; 
  box-shadow: 2px 2px 30px 2px rgba(231,231,231,0.31);
  cursor: pointer;

}

.appBtn a {
  text-transform: uppercase;
  color: #08E6C8;
  text-decoration: none;
  }

.appBtn:hover,  .gitHubButton:hover {
  background: #08E6C8 ;
  color: #fff;
  padding: 7px 10px;
  border: none;
}

.appBtn a:hover {
  color: #fff;
}

.login-form .appBtn,  .gitHubButton {
  background: #fff;
  color: rgb(14, 201, 176);
  padding: 7px 10px;
  border: none;  
}

.login-form h3:first-child {
  margin-top: 60px;
}

.login-form .appBtn:hover,  .gitHubButton:hover {
  background: #08E6C8;
  color: #fff;
  padding: 7px 10px;
  border: none;
}

.appBtn:active, .gitHubButton:active {
  box-shadow: 2px -1px 10px 1px rgba(231,231,231,0.31);

}

.appBtn:focus, .gitHubButton:focus {
  outline: 0;
}

.App-title {
  font-size: 1.5em;
  font-weight: 800;
}

.App-intro {
  font-size: large;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

.loginRegisterSwitch {
  margin-left: 10px;
  margin-bottom: 15px;
  border: none;
  background: none;
  border-bottom: 1px solid #bebebe;
  text-transform: uppercase;
}

.loginRegisterSwitch:focus {
  outline: 0;
  border-bottom: 1.5px solid #08E6C8;
}

.loginRegisterSwitch::after {
  outline: 0;
  border-bottom: 1.5px solid #08E6C8;
}

.user-form {
  margin-top: 125px;
}

.user-form h2 {
  margin-bottom: 30px;
  color: #0f0f0f;
  font-weight: 700; 
}

.user-form input {
  background: none;
  border: none;
  border-bottom: 1px solid #bebebe;
  margin-left: 20px;
}

.user-form input:focus {
  outline: 0;
}

.user-form form .appBtn, .gitHubButton{
  margin-top: 25px;
  width: 150px;
}

/* Event Page Styles */
.events {
margin: 100px auto 75px auto;
}
.events h1{
}

.events ul {
  list-style-type: none;
  margin: 0 auto;
}

.events ul li {
  font-size: 1.5em;
  margin-top: 4%;
  border-bottom: 1px solid #cac9c9;
}

.events ul li button {
  font-size: 18px;
  color: #08E6C8;
  margin-top: 10px;
  margin-bottom: 25px;
}

.event-page {
  width: 100%;
  margin-top: 100px;
}

.event-info-container {
  margin: 0 auto;
}

.event-image {
  width: 70%;
  margin: 0 auto;
}

